# TP---Projekt-3

./: CMakeLists.txt  README.md  sygnaly.cpp
raport/: Projekt.ipynb
